--- a/6-iris.ipynb
+++ b/6-iris.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47f76907-1651-4e95-90f5-1bc4ea38cd5d",
+   "metadata": {},
+   "source": [
+    ">  머신러닝은 6, 7, 8 장으로 차례대로 학습하면 최종 8장에서 잘 정리가 되어진다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5ae2b972-01e6-4fc4-8a7b-ce4bb1269974",
    "metadata": {},
    "source": [
@@ -322,7 +330,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ed732be9d0>"
+       "<seaborn.axisgrid.PairGrid at 0x209625c9430>"
       ]
      },
      "execution_count": 8,
@@ -354,7 +362,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ed75ddc7f0>"
+       "<seaborn.axisgrid.PairGrid at 0x209641282e0>"
       ]
      },
      "execution_count": 9,
@@ -395,7 +403,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ed7040ae80>"
+       "<seaborn.axisgrid.PairGrid at 0x20965dc8cd0>"
       ]
      },
      "execution_count": 10,
@@ -495,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = iris.data[:, 2:] # iris data에서 petal length, petal width 만 가져옴.\n",
+    "X_train = iris.data[:, 2:] # iris data에서 petal length, petal width 만 가져옴.\n",
     "y_train = iris.target"
    ]
   },
@@ -819,7 +827,7 @@
    ],
    "source": [
     "print(iris.data)\n",
-    "print(x_train)\n",
+    "print(X_train)\n",
     "print(y_train)"
    ]
   },
@@ -850,7 +858,7 @@
    ],
    "source": [
     "tree_clf = DecisionTreeClassifier(max_depth=2, random_state=13)\n",
-    "tree_clf.fit(x_train, y_train)\n",
+    "tree_clf.fit(X_train, y_train)\n",
     "\n",
     "# max_depth: 몇 단계까지 진입할 것인지 정함\n",
     "# random_state: 랜덤변수\n",
@@ -982,7 +990,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x1ed768fdcd0>"
+       "<graphviz.sources.Source at 0x20965cdd040>"
       ]
      },
      "execution_count": 17,
